--- a/resources/build.properties
+++ b/resources/build.properties
@@ -59,13 +59,13 @@ ant.description=Processing Library Ant build file.
 # Give your Library a name. The name must not contain spaces or special 
 # characters.
 
-project.name=YourLibrary
+project.name=NiceColorPalettes
 
 
 # The name as the user will see it. This can contain spaces and special 
 # characters.
 
-project.prettyName=Your Library
+project.prettyName=Nice Color Palettes
 
 
 # Use 'normal' or 'fast' as value for project.compile.
@@ -80,14 +80,14 @@ project.compile=normal
 
 # Set your name and URL, used for the web page and properties file.
 
-author.name=Your Name
-author.url=http://yoururl.com
+author.name=Federico Pepe
+author.url=https://www.federicopepe.com
 
 
 # Set the web page for your Library.
 # This is NOT a direct link to where to download it.
 
-library.url=http://yourlibraryname.com
+library.url=https://github.com/federico-pepe/nice-color-palettes
 
 
 # Set the category (or categories) of your Library from the following list:
@@ -99,7 +99,7 @@ library.url=http://yourlibraryname.com
 # If a value other than those listed is used, your Library will listed as 
 # "Other". Many categories must be comma-separated.
 
-library.categories=Other
+library.categories=Utilities
 
 
 # A short sentence (or fragment) to summarize the Library's function. This will 
@@ -108,7 +108,7 @@ library.categories=Other
 # like mentioning that it's a Library. This should start with a capitalized 
 # letter, and end with a period.
 
-library.sentence=A collection of utilities for solving this and that problem.
+library.sentence=Use the best color palettes from ColourLovers.com in Processing.
 
 
 # Additional information suitable for the Processing website. The value of
@@ -116,15 +116,15 @@ library.sentence=A collection of utilities for solving this and that problem.
 # second sentence here. If your Library only works on certain operating systems,
 # mention it here.
 
-library.paragraph= 
+library.paragraph=Each palette contains five different colors that work well together.
 
 
 # Set the source code repository for your project.
 # We recommend Bitbucket (https://bitbucket.org) or GitHub (https://github.com).
 
 source.host=GitHub
-source.url=https://github.com/YourName/YourProject
-source.repository=https://github.com/YourName/YourProject.git
+source.url=https://github.com/federico-pepe/nice-color-palettes
+source.repository=https://github.com/federico-pepe/nice-color-palettes.git
 
 
 # The current version of your Library. 
@@ -132,12 +132,12 @@ source.repository=https://github.com/YourName/YourProject.git
 # This is used to compare different versions of the same Library, and check if 
 # an update is available.
 
-library.version=1
+library.version=0
 
 
 # The version as the user will see it.
 
-library.prettyVersion=1.0.0
+library.prettyVersion=0.1.0
 
 
 # The min and max revision of Processing compatible with your Library.
@@ -160,7 +160,7 @@ tested.processingVersion=3.2.3
 
 # Additional information for the generated webpage.
 
-library.copyright=(c) 2016
+library.copyright=(c) 2019
 library.dependencies=?
 library.keywords=?
 
