--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 bin
 tmp
 distribution
+
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+# Thumbnails
+._*
